# llm-knowledge-ingestion

./: .gitignore  Makefile  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: config.yml  feature_request.md
.github/workflows/: ci.yml  contract-consistency.yml  sync-project-issues.yml
configs/: base.yaml
docs/: architecture.md  data-contracts.md  integration.md  mvp-ingestion.md  shared-contract-summary.json
examples/: README.md  sample.json  sample.md  sample.txt
examples/integration/: README.md  ingestion_chunks_for_observability.jsonl  ingestion_documents_for_dataset_foundry.jsonl  ingestion_lineage_for_dataset_foundry.jsonl
src/llm_knowledge_ingestion/: __init__.py
src/llm_knowledge_ingestion/chunking/: __init__.py  strategies.py
src/llm_knowledge_ingestion/cli/: __init__.py  main.py
src/llm_knowledge_ingestion/contracts/: __init__.py  entities.py  models.py
src/llm_knowledge_ingestion/dedup/: __init__.py  hashing.py
src/llm_knowledge_ingestion/io/: __init__.py  artifacts.py  local_files.py  sources.py
src/llm_knowledge_ingestion/normalize/: __init__.py  schema.py
src/llm_knowledge_ingestion/parsers/: __init__.py  base.py
src/llm_knowledge_ingestion/pipeline/: __init__.py  config.py  interfaces.py  orchestrator.py
tests/: test_chunking_mvp.py  test_contracts.py  test_core_scaffold.py  test_io_local_files.py  test_package.py  test_pipeline_mvp.py
